test/inference/good/coreml_record_define.mle
type t = {x : int; y : int}
let ['a] (x : t) = ['a] {x = 0; y = 0[]}