test/inference/bad/coreml_label_already_taken.mle
type t = {x : int}
type u = {x : int}